[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jplaw"
version = "0.1.1"
authors = [
  { name="Amar Persaud", email="tehspartaa@gmail.com" },
]
description = "A python wrapper for the lemmy HTTP API. Forked from plaw by Benjamin Jablonski (benja810)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/amarpersaud/python-jplaw"
"Bug Tracker" = "https://github.com/amarpersaud/python-jplaw/issues"

